[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Oskar.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.904301
height = 0.002

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( 0, -1, 14, -8, -1, 0, 8, -1, 0, 0, 2, 14, 8, 2, 0, -8, 2, 0 )

[sub_resource type="CapsuleMesh" id=6]

[node name="Oskar" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.713729, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Eyes" type="Area" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Eyes"]
shape = SubResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24917, -0.720291 )
mesh = SubResource( 6 )

[node name="FakeEyes" type="Spatial" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Eyes" to="." method="_on_Eyes_body_entered"]
[connection signal="body_exited" from="Eyes" to="." method="_on_Eyes_body_exited"]
